Updated CFI backned to be master for types using the ISO standard, added endpoints
